src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admin Assistant</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Anesthesiologist</fullName>
                </value>
                <value>
                    <fullName>Attending</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Cardiologist</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Chief Medical Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Nursing Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operations Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Quality Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Resident</fullName>
                </value>
                <value>
                    <fullName>Chief Technician</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Dietitian</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Educator</fullName>
                </value>
                <value>
                    <fullName>Fellow</fullName>
                </value>
                <value>
                    <fullName>Interventional Radiologist</fullName>
                </value>
                <value>
                    <fullName>Inventory Coordinator</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Medical Director</fullName>
                </value>
                <value>
                    <fullName>Nephrologist</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Manager</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Perfusionist</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPT_OUT_REASON__c</fullName>
        <label>Opt out reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_Advanced_Surgery__c</fullName>
        <label>Pref Advanced Surgery</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_Hospital_Care__c</fullName>
        <description>Yes
No</description>
        <label>Pref Hospital Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_IV_Systems__c</fullName>
        <label>Pref IV Systems</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_Nutrition__c</fullName>
        <label>Pref Nutrition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_Renal_Acute__c</fullName>
        <label>Pref Renal Acute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref_Renal_Chronic__c</fullName>
        <label>Pref Renal Chronic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pref__c</fullName>
        <label>Pref Pharmacy Compounding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prev__c</fullName>
        <label>Prev IV Solutions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_to_IBM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to IBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accountMeta__c</fullName>
        <formula>Account.nameMeta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountMeta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstMeta__c</fullName>
        <label>firstMeta</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastMeta__c</fullName>
        <label>lastMeta</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>DP_IND_GENDER__c</columns>
        <columns>DP_IND_LANGUAGE_CODE__c</columns>
        <columns>DP_IND_PROFESSIONAL_TYPE__c</columns>
        <columns>DP_IND_SPEC_1__c</columns>
        <columns>DP_IND_SPEC_2__c</columns>
        <columns>DP_IND_STATE__c</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DP_IND_STATUS__c</field>
            <operation>notEqual</operation>
            <value>Invalid</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.BST_IMS_Contact</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_in_System</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>DP_IND_GENDER__c</columns>
        <columns>DP_IND_LANGUAGE_CODE__c</columns>
        <columns>DP_IND_PROFESSIONAL_TYPE__c</columns>
        <columns>DP_IND_SPEC_1__c</columns>
        <columns>DP_IND_SPEC_2__c</columns>
        <columns>DP_IND_STATE__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts in System</label>
        <language>en_US</language>
        <sharedTo>
            <role>GM_Benelux</role>
            <role>GM_France_Benelux</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_Data</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_COUNTRY__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>CA Data</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_CA_Admin</group>
            <group>Baxter_CA_Marketing</group>
            <group>Baxter_CA_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>France_Campaign_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Baxter International Inc.</value>
        </filters>
        <filters>
            <field>BST_COUNTRY__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France Campaign Members</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>DP_IND_GENDER__c</columns>
        <columns>DP_IND_LANGUAGE_CODE__c</columns>
        <columns>DP_IND_PROFESSIONAL_TYPE__c</columns>
        <columns>DP_IND_SPEC_1__c</columns>
        <columns>DP_IND_SPEC_2__c</columns>
        <columns>DP_IND_STATE__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>BST_Baxter_Only</fullName>
        <active>true</active>
        <description>This may be used for Non-HCP (Health Care Professional) Contacts and will not generate an audit log or data provider integration flow. May also be used for Baxter Associates added as Contact records, for multi-user invite workaround.</description>
        <label>Baxter Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>BST_IMS_Contact</fullName>
        <active>true</active>
        <description>Used for Health Care Professional detail, as contracted with your data provider.  Creating or updating these records initiates the approval process to the Country Admin, and validation with data provider when appropriate.</description>
        <label>IMS Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarketingConsent</fullName>
        <active>true</active>
        <label>MarketingConsent</label>
    </recordTypes>
    <recordTypes>
        <fullName>WCA_Only</fullName>
        <active>true</active>
        <description>Hidden Record Type for Marketing Segmentation and Watson Integration</description>
        <label>WCA Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BST_Check_value_of_IMS_Ind_Status</fullName>
        <active>true</active>
        <description>Condition to check if any user other than Business admin has selected value as invalid</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) ,  ISPICKVAL(  DP_IND_STATUS__c  , &apos;Invalid&apos;) , RecordType.DeveloperName = &apos;BST_IMS_Contact&apos; )</errorConditionFormula>
        <errorDisplayField>DP_IND_STATUS__c</errorDisplayField>
        <errorMessage>Select Value Other Than Invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Country_Is_Mandatory</fullName>
        <active>true</active>
        <description>Country field will be mandatory.</description>
        <errorConditionFormula>AND( ISBLANK( TEXT(BST_COUNTRY__c )), OR(
 RecordType.DeveloperName = &apos;BST_IMS_Contact&apos; , RecordType.DeveloperName = &apos;BST_Baxter_Only&apos; ) )</errorConditionFormula>
        <errorDisplayField>BST_COUNTRY__c</errorDisplayField>
        <errorMessage>Country Is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_First_Name_Is_Mandatory</fullName>
        <active>true</active>
        <description>If First Name is blank then the system will throw an error.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName  = &quot;BST_IMS_Contact&quot;,ISBLANK( FirstName  ))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name Is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_No_edit_permission</fullName>
        <active>false</active>
        <description>Fields Phone,  Email, Fax coming from IMS data should be read only for all users in the application in order to comply with data privacy rules and regulation</description>
        <errorConditionFormula>AND( OR( ISCHANGED( Phone ) , ISCHANGED( Fax ) , ISCHANGED( Email ) ),  OR( RecordType.DeveloperName = &apos;BST_IMS_Contact&apos; , RecordType.DeveloperName = &apos;BST_Baxter_Only&apos; ) )</errorConditionFormula>
        <errorMessage>No Edit Permission On Phone, Fax And Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Salution_Is_Mandatory</fullName>
        <active>true</active>
        <description>If salutation is blank then the system will throw an error.</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName  = &quot;BST_IMS_Contact&quot;, RecordType.DeveloperName  = &quot;BST_Baxter_Only&quot;),ISBLANK(  TEXT( Salutation ) ))</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Salutation Is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Fields</fullName>
        <active>false</active>
        <description>If salutation and first name field are blank then the system will throw an error.</description>
        <errorConditionFormula>AND($RecordType.Name = $Label.BST_IMS_Contact,(ISBLANK(  TEXT( Salutation ) )  ||   ISBLANK(  FirstName ) ||  ISBLANK(TEXT(DP_IND_GENDER__c)) ||  ISBLANK(TEXT(DP_IND_PROFESSIONAL_TYPE__c) ) ||  ISBLANK(TEXT(DP_IND_SPEC_1__c)) ))</errorConditionFormula>
        <errorMessage>Salutation, First name, IMS Ind. Gender, IMS Ind. Prof. Type And IMS Ind. Speciality 1 Are Required.</errorMessage>
    </validationRules>
</CustomObject>